--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 body {
-    background-color: #f0f4f5;
+    background-color:#fffae9;
     display: flexbox;
     justify-content: center;
     align-items: center;
+    align-content: center;
     height: 100vh; /* Full height of the viewport */;
 }
 
-h1 {
+.heading {
     text-align: center;
-    font-size: 2.5em;
-    color: #212b32;
+    font-size: 1.75em;
+    color: #2b56b3;
     border: 1;
+    font-weight: 900;
 }
 
 i, b {
@@ -23,12 +25,38 @@ html {
 }
 form {
     text-align: center;
+    font-size: 1.2em;
 }
 
 button {
-    
+    font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
     font-size: 2em;
+    font-weight: 500;
+    background-color: rgb(0, 102, 47);
+    box-shadow: rgb(0, 64, 30) 0px 4px 0px 0px;
+    color: beige;
+    border: none;
+    height: 50px;
+    border-radius: 5px;
 }
+
+button:hover {
+    font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
+    font-size: 2em;
+    font-weight: 500;
+    background-color: rgb(0, 64, 30);
+    box-shadow: rgb(0, 102, 47) 0px 4px 0px 0px;
+    color: beige;
+    border: none;
+    height: 50px;
+    border-radius: 5px;
+}
+
+/*
+body {
+    background-image: url("background.jpg");
+}
+*/
 
 #result {
     text-align: center;
@@ -39,4 +67,18 @@ button {
     text-align: center;
     align-self: center;
     color: f0f4f5;
+}
+
+#note {
+    margin-right: 1px;
+    margin-left: 1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 200px;
+    margin-left: 200px;
+    text-align: center;
+    align-self: center;
+    border-style: dotted;
+    font-size: 1.2em;
+    background-color: #f0f4f5;
 }
