--- a/style.css
+++ b/style.css
@@ -1,5 +1,69 @@
+:root {
+    --blue: #2b56b3;
+    --cyan: #beebeb;
+    --cream: #fafad2;
+    --white: #ebf8fb;
+    --teal: #006663;
+}
+
+/* Fonts */
+.henny-penny-regular {
+    font-family: "Henny Penny", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.atma-light {
+    font-family: "Atma", serif;
+    font-weight: 300;
+    font-style: normal;
+}
+  
+.atma-regular {
+    font-family: "Atma", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.atma-medium {
+    font-family: "Atma", serif;
+    font-weight: 500;
+    font-style: normal;
+}
+  
+.atma-semibold {
+    font-family: "Atma", serif;
+    font-weight: 600;
+    font-style: normal;
+}
+  
+.atma-bold {
+    font-family: "Atma", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+  
+.chewy-regular {
+    font-family: "Chewy", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.crete-round-regular {
+    font-family: "Crete Round", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.crete-round-regular-italic {
+    font-family: "Crete Round", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+  
 body {
-    background-color:#fffae9;
+    background-color: var(--cyan);
     display: flexbox;
     justify-content: center;
     align-items: center;
@@ -10,14 +74,19 @@ body {
 .heading {
     text-align: center;
     font-size: 1.75em;
-    color: #2b56b3;
+    color: var(--blue);
     border: 1;
     font-weight: 900;
+    font-family: "Atma", serif;
 }
 
 i, b {
     text-align: center;
     color: #212b32;
+}
+
+label {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 html {
@@ -32,12 +101,13 @@ button {
     font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
     font-size: 2em;
     font-weight: 500;
-    background-color: rgb(0, 102, 47);
+    background-color: var(--teal);
     box-shadow: rgb(0, 64, 30) 0px 4px 0px 0px;
     color: beige;
     border: none;
     height: 50px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 button:hover {
@@ -45,7 +115,7 @@ button:hover {
     font-size: 2em;
     font-weight: 500;
     background-color: rgb(0, 64, 30);
-    box-shadow: rgb(0, 102, 47) 0px 4px 0px 0px;
+    box-shadow: var(--teal) 0px 4px 0px 0px;
     color: beige;
     border: none;
     height: 50px;
@@ -66,19 +136,22 @@ body {
 #result_image {
     text-align: center;
     align-self: center;
-    color: f0f4f5;
+    color: #f0f4f5;
 }
 
 #note {
     margin-right: 1px;
     margin-left: 1px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     margin-right: 200px;
     margin-left: 200px;
     text-align: center;
     align-self: center;
-    border-style: dotted;
+    border-style: inset;
     font-size: 1.2em;
-    background-color: #f0f4f5;
+    font-family: "Crete Round";
+    background-color: var(--white);
 }
