--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --blue: #2b56b3;
     --cyan: #beebeb;
     --cream: #fafad2;
-    --white: #ebf8fb;
+    --white: #ecfcff;
     --teal: #006663;
 }
 
@@ -109,6 +109,15 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
+#color, #gender, input, #dull {
+    cursor: pointer;
+}
+
+#name, #mass, #volume {
+    cursor: text;
+}
+
 
 button:hover {
     font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
