--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --blue: #2b56b3;
+    --sky: #5580db;
     --cyan: #beebeb;
     --cream: #fafad2;
     --white: #ecfcff;
@@ -64,6 +65,7 @@
   
 body {
     background-color: var(--cyan);
+    background-image: linear-gradient(to bottom, var(--cyan) 10%, var(--sky) 90%);
     display: flexbox;
     justify-content: center;
     align-items: center;
@@ -86,9 +88,13 @@ i, b {
 }
 
 label {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #000000;
 }
-
+.personality-label {
+    font-weight: normal;
+    color: var(--white);
+}
 html {
     font-family: Frutiger W01,Arial,Sans-serif;
 }
@@ -99,8 +105,8 @@ form {
 
 button {
     font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
-    font-size: 2em;
-    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: 600;
     background-color: var(--teal);
     box-shadow: rgb(0, 64, 30) 0px 4px 0px 0px;
     color: beige;
@@ -121,8 +127,8 @@ button {
 
 button:hover {
     font-family: "Frutiger W01", Arial, sans-serif /*'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif*/;
-    font-size: 2em;
-    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: 600;
     background-color: rgb(0, 64, 30);
     box-shadow: var(--teal) 0px 4px 0px 0px;
     color: beige;
