--- a/style/fonts.css
+++ b/style/fonts.css
@@ -3,3 +3,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+/* Imports Fonts From Google */
